--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "tiny-lr": "^0.1.1"
   },
   "scripts": {
-    "start": "npm i && bower i",
+    "start": "npm i && bower i"
   },
   "dependencies": {
     "browserify": "^9.0.3",
