--- a/package.json
+++ b/package.json
@@ -21,10 +21,21 @@
     "start": "npm i && bower i"
   },
   "dependencies": {
-    "browserify": "^9.0.3",
-    "gulp-less": "^3.0.2",
+    "angular": "^1.3.16",
+    "angular-ui-router": "^0.2.15",
+    "browserify": "^9.0.8",
+    "express": "^4.12.4",
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-less": "^3.0.3",
     "gulp-plumber": "^0.6.6",
-    "gulp-sourcemaps": "^1.5.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "orchestrator": "^0.3.7",
+    "tiny-lr": "^0.1.5",
+    "vinyl": "^0.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0"
